crates/oxc_react_compiler/tests/snapshots/error.invalid-return-mutable-function-from-hook.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-return-mutable-function-from-hook.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot modify local variables after render completes", labels: [LabeledSpan { label: Some("This function may (indirectly) reassign or modify `cache` after render"), span: Span { start: 182, end: 224 }, primary: false }, LabeledSpan { label: Some("This modifies `cache`"), span: Span { start: 194, end: 199 }, primary: false }], help: Some("This argument is a function which may reassign or mutate `cache` after render, which can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
