crates/oxc_react_compiler/tests/snapshots/error.invalid-setState-in-useMemo.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-setState-in-useMemo.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] VoidUseMemo: useMemo() callbacks must return a value", labels: [LabeledSpan { label: Some("useMemo() callbacks must return a value"), span: Span { start: 140, end: 192 }, primary: false }], help: Some("This useMemo() callback doesn't return a value. useMemo() is for computing and caching values, not for arbitrary side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] RenderSetState: Calling setState from useMemo may trigger an infinite loop", labels: [LabeledSpan { label: Some("Found setState() within useMemo()"), span: Span { start: 152, end: 162 }, primary: false }], help: Some("Each time the memo callback is evaluated it will change state. This can cause a memoization dependency to change, running the memo function again and causing an infinite loop. Instead of setting state in useMemo(), prefer deriving the value during render. (https://react.dev/reference/react/useState)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] RenderSetState: Calling setState from useMemo may trigger an infinite loop", labels: [LabeledSpan { label: Some("Found setState() within useMemo()"), span: Span { start: 173, end: 181 }, primary: false }], help: Some("Each time the memo callback is evaluated it will change state. This can cause a memoization dependency to change, running the memo function again and causing an infinite loop. Instead of setting state in useMemo(), prefer deriving the value during render. (https://react.dev/reference/react/useState)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
