crates/oxc_react_compiler/tests/snapshots/error.invalid-setstate-unconditional-with-keyed-state.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-setstate-unconditional-with-keyed-state.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] RenderSetState: Cannot call setState during render", labels: [LabeledSpan { label: Some("Found setState() in render"), span: SourceSpan { offset: 151, length: 8 }, primary: false }], help: Some("Calling setState during render may trigger an infinite loop.\n* To reset state when other state/props change, use `const [state, setState] = useKeyedState(initialState, key)` to reset `state` when `key` changes.\n* To derive data from other state/props, compute the derived data during render without using state"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
